index.html updated

--- a/Web Application/frontend/public/index.html
+++ b/Web Application/frontend/public/index.html
@@ -5,11 +5,8 @@
         <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#1f1f1f" />
-        <meta name="title" content="Mantis React Dashboard | Open Source Admin Template" />
-        <meta
-            name="description"
-            content="Mantis is a free, super flexible and customizable react redux dashboard template built using MUI React components with open source MIT license."
-        />
+        <meta name="title" content="Smart Safety Helmet | Dashboard" />
+        <meta name="description" content="Smart Safety Helmet | Dashboard" />
 
         <!--
       Notice the use of %PUBLIC_URL% in the tags above.
