--- a/Web Application/frontend/public/index.html
+++ b/Web Application/frontend/public/index.html
@@ -2,21 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+        <link rel="icon" href="%PUBLIC_URL%/logo.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#1f1f1f" />
         <meta name="title" content="Smart Safety Helmet | Dashboard" />
         <meta name="description" content="Smart Safety Helmet | Dashboard" />
 
-        <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
         <title>Smart Safety Helmet | Dashboard</title>
         <link rel="preconnect" href="https://fonts.gstatic.com" />
         <link
